# history-viewer

./: CHANGELOG.md  CLAUDE.md  README.md  index.html  learnings.md  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
.claude/skills/release/: SKILL.md
.github/workflows/: release.yml
mcp-server/: Cargo.toml
mcp-server/src/: history.rs  main.rs
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: DateFilter.tsx  DomainIcon.tsx  StatsView.tsx  Timeline.tsx
