[package]
name = "history-viewer-mcp"
version = "0.3.1"
edition = "2021"
description = "MCP server exposing local browser history as tools for LLMs"

[[bin]]
name = "history-viewer-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4" }
regex = "1"
